--- a/index.html
+++ b/index.html
@@ -25,11 +25,24 @@
         </nav>
     </header>
     <br>
-    
+    <h1 class="titulo-pagina">
+        Propriedades Flexbox - Parte 1: Container
+    </h1>
+    <hr>
     <main class="principal">
         <h1 class="nome-propriedade">
             1 - display - ativa o flexbox / identifica que aquele elemento será um container flex.
         </h1>
+        <hr>
+        <h1 class="nome-propriedade">
+            2 - Flex-direction - Define a direção do eixo principal.<br>
+            Exemplos:
+        </h1>
+
+        <h2 class="valor-propriedade">
+            Flex-direction: row
+
+        </h2>
         <h1>Curso de Flexbox Row</h1>
         <img src="Imagens/row.png" alt="flexbox row">
         <br>
