--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <hr>
     <main class="principal">
         <h1 class="nome-propriedade">
-            1 - display - ativa o flexbox / identifica que aquele elemento será um container flex.
+            1 - Display - ativa o flexbox / identifica que aquele elemento será um container flex.
         </h1>
         <hr>
         <h1 class="nome-propriedade">
@@ -43,6 +43,13 @@
             Flex-direction: row
 
         </h2>
+
+        <main class="container-row">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+        </main>
+        <hr>
         <h1>Curso de Flexbox Row</h1>
         <img src="Imagens/row.png" alt="flexbox row">
         <br>
