Row e Column Reverse

--- a/index.html
+++ b/index.html
@@ -50,6 +50,41 @@
             <div class="bloco3">3</div>
         </main>
         <hr>
+
+        <h2 class="valor-propriedade">
+            Flex-direction: Column
+
+        </h2>
+
+        <main class="container-column">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+        </main>
+        <hr>
+
+        <h2 class="valor-propriedade">
+            Flex-direction: Row-Reverse
+
+        </h2>
+
+        <main class="container-rowreverse">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+        </main>
+        <hr>
+        <h2 class="valor-propriedade">
+            Flex-direction: Column Reverse
+
+        </h2>
+
+        <main class="container-columnreverse">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+        </main>
+        <hr>
         
 
     </main>
