--- a/index.html
+++ b/index.html
@@ -30,19 +30,11 @@
     </h1>
     <hr>
     <main class="principal">
-        <h1 class="nome-propriedade">
-            1 - Display - ativa o flexbox / identifica que aquele elemento será um container flex.
-        </h1>
+        <h1 class="nome-propriedade">1 - Display - ativa o flexbox / identifica que aquele elemento será um container flex.</h1>
         <hr>
-        <h1 class="nome-propriedade">
-            2 - Flex-direction - Define a direção do eixo principal.<br>
-            Exemplos:
-        </h1>
+        <h1 class="nome-propriedade">2 - Flex-direction - Define a direção do eixo principal.<br>Exemplos:</h1>
 
-        <h2 class="valor-propriedade">
-            Flex-direction: row
-
-        </h2>
+        <h2 class="valor-propriedade">Flex-direction: row</h2>
 
         <main class="container-row">
             <div class="bloco1">1</div>
@@ -51,10 +43,7 @@
         </main>
         <hr>
 
-        <h2 class="valor-propriedade">
-            Flex-direction: Column
-
-        </h2>
+        <h2 class="valor-propriedade">Flex-direction: Column</h2>
 
         <main class="container-column">
             <div class="bloco1">1</div>
@@ -63,10 +52,7 @@
         </main>
         <hr>
 
-        <h2 class="valor-propriedade">
-            Flex-direction: Row-Reverse
-
-        </h2>
+        <h2 class="valor-propriedade">Flex-direction: Row-Reverse</h2>
 
         <main class="container-rowreverse">
             <div class="bloco1">1</div>
@@ -74,10 +60,8 @@
             <div class="bloco3">3</div>
         </main>
         <hr>
-        <h2 class="valor-propriedade">
-            Flex-direction: Column Reverse
 
-        </h2>
+        <h2 class="valor-propriedade">Flex-direction: Column Reverse</h2>
 
         <main class="container-columnreverse">
             <div class="bloco1">1</div>
