Flex Justify-center

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
     </header>
     <br>
     <h1 class="titulo-pagina">
-        Propriedades Flexbox - Parte 1: Container
-    </h1>
+        Propriedades Flexbox - Parte 1: Container</h1>
     <hr>
     <main class="principal">
-        <h1 class="nome-propriedade">1 - Display - ativa o flexbox / identifica que aquele elemento será um container flex.</h1>
+        <h1 class="nome-propriedade">1 - Display - Ativa o flexbox / identifica que aquele elemento será um container flex.</h1>
         <hr>
         <h1 class="nome-propriedade">2 - Flex-direction - Define a direção do eixo principal.<br>Exemplos:</h1>
 
@@ -71,6 +70,27 @@
         <hr>
         
 
+        <h1 class="nome-propriedade">3: Justify-Content
+            Alinhar os objetos ou elementos no eixo principal.<br>
+            Exemplos:
+        </h1>
+
+            <h2 class="valor-propriedade">Justify-Content: Center</h2>
+
+            <main class="container-justify-center">
+                <div class="bloco1">1</div>
+                <div class="bloco2">2</div>
+                <div class="bloco3">3</div>
+            </main>
+        
+
+
+
+
+
+
+
+        <hr>
     </main>
 
 </body>
