--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         Propriedades Flexbox - Parte 1: Container</h1>
     <hr>
     <main class="principal">
-        <h1 class="nome-propriedade">1 - Display - Ativa o flexbox / identifica que aquele elemento será um container flex.</h1>
+        <h1 class="nome-propriedade">1 - Display - Ativa o flexbox / identifica que aquele elemento será um container
+            flex.</h1>
         <hr>
         <h1 class="nome-propriedade">2 - Flex-direction - Define a direção do eixo principal.<br>Exemplos:</h1>
 
@@ -68,26 +69,68 @@
             <div class="bloco3">3</div>
         </main>
         <hr>
-        
+
 
         <h1 class="nome-propriedade">3: Justify-Content
             Alinhar os objetos ou elementos no eixo principal.<br>
             Exemplos:
         </h1>
 
-            <h2 class="valor-propriedade">Justify-Content: Center</h2>
+        <h2 class="valor-propriedade">Justify-Content: Center</h2>
 
-            <main class="container-justify-center">
-                <div class="bloco1">1</div>
-                <div class="bloco2">2</div>
-                <div class="bloco3">3</div>
-            </main>
-        
+        <main class="container-justify-center">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+        </main>
+
+        <h2 class="valor-propriedade">Justify-Content: Flex Start</h2>
+
+        <main class="container-justify-start">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+        </main>
+
+
+
+        <h2 class="valor-propriedade">Justify-Content: Flex-end</h2>
+
+        <!-- Utilizando Duas Classes container-justify-end e flexend -->
+        <main class="container-justify-end flexend">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+        </main>
+
+
+
+        <h2 class="valor-propriedade">Justify-Content: Flex-between</h2>
+
+        <main class="container-justify-between">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+        </main>
 
 
 
 
+        <h2 class="valor-propriedade">Justify-Content: Space-Around</h2>
 
+        <main class="container-justify-space-around">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+        </main>
+
+        <h2 class="valor-propriedade">Justify-Content: Space-Evenly</h2>
+
+        <main class="container-justify-space-evenly">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+        </main>
 
 
         <hr>
