--- a/index.html
+++ b/index.html
@@ -132,9 +132,16 @@
             <div class="bloco3">3</div>
         </main>
 
-        
+
 
         <hr>
+        <h1 class="nome-propriedade">4: Align-Itens:
+            Alinha os objetos nos eixos perpendiculares ou secundários.<br>
+            Exemplos:
+        </h1>
+
+
+
     </main>
 
 </body>
