--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
             <div class="bloco3">3</div>
         </main>
 
-        <h2 class="valor-propriedade">Justify-Content: Space-Evenly</h2>
+     <h2 class="valor-propriedade">Justify-Content: Space-Evenly</h2>
 
         <main class="container-justify-space-evenly">
             <div class="bloco1">1</div>
             <div class="bloco2">2</div>
             <div class="bloco3">3</div>
-        </main>
+        </main>   
 
 
 
@@ -140,6 +140,32 @@
             Exemplos:
         </h1>
 
+        <h2 class="valor-propriedade">Flexbox: Align-Itens: Center;</h2>
+
+        <main class="container-justify-align-itens">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+        </main>
+
+
+        
+        <h2 class="valor-propriedade">Flexbox: Align-Itens: Flex-Start;</h2>
+
+        <main class="container-justify-align-itens-start">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+        </main>
+
+
+        <h2 class="valor-propriedade">Flexbox: Align-Itens: Flex-end;</h2>
+
+        <main class="container-justify-align-itens-end">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+        </main>
 
 
     </main>
