--- a/backgroud.html
+++ b/backgroud.html
@@ -1,24 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Backgound Duplo</title>
     <style>
-      #example1{
+        body {
+            background-image: url(Imagens/composicao-de-laptop-e-bussola-para-engenharia_23-2148169502.avif);
+            background-repeat: no-repeat;
+            background-size: 100%;
+            bottom: 0;
+            color: black;
+            left: 0;
+            overflow: auto;
+            padding: 3em;
+            position: absolute;
+            right: 0;
+            text-align: center;
+            top: 0;
+
+        }
+
+
+
+
+
+        /* #example1{
             background-image: url(Imagens/logo.png), url(Imagens/colunn.png);
             background-position: right bottom, left top;
             background-repeat: no-repeat, no-repeat;
-        }
+        } */
     </style>
 
 </head>
+
 <body>
     <div id="example1">
         <h1>Lorem Ipsum Dolor</h1>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-        <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-      </div>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+            dolore magna aliquam erat volutpat.</p>
+        <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
+            commodo consequat.</p>
+    </div>
 </body>
+
 </html>
