--- a/index.html
+++ b/index.html
@@ -168,6 +168,179 @@
         </main>
 
 
+
+        <h2 class="valor-propriedade">Flexbox: Align-Itens: Stretch</h2>
+
+        <main class="container-align-itens-Stretch">
+            <div class="bloco1-sem-altura">1</div>
+            <div class="bloco2-sem-altura">2</div>
+            <div class="bloco3-sem-altura">3</div>
+        </main>
+
+
+
+        <h2 class="valor-propriedade">Flexbox: Align-Itens: Baseline</h2>
+
+        <main class="container-align-itens-Baseline">
+            <div class="bloco1-baseline">1</div>
+            <div class="bloco2-baseline">2</div>
+            <div class="bloco3-baseline">3</div>
+        </main>
+
+
+
+        <hr>
+        <h1 class="nome-propriedade">5: Flex-wrap:
+            Serve para decidir se os elemnetos irão para a linha de baixo, quando chegar no final ou se eles ficarão
+            espremidos - Quebra de linhas.<br>
+            Exemplos:
+        </h1>
+
+
+        <h2 class="valor-propriedade">flex wrap: Nowrap Espreme a linha para caber tudo na mesma linha</h2>
+
+        <main class="container-flexwrap-nowrap">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+            <div class="bloco1">4</div>
+            <div class="bloco2">5</div>
+            <div class="bloco3">6</div>
+            <div class="bloco1">7</div>
+            <div class="bloco2">8</div>
+            <div class="bloco3">9</div>
+            <div class="bloco1">10</div>
+            <div class="bloco2">11</div>
+            <div class="bloco3">12</div>
+            <div class="bloco1">13</div>
+            <div class="bloco2">14</div>
+            <div class="bloco3">15</div>
+            <div class="bloco1">16</div>
+            <div class="bloco2">17</div>
+            <div class="bloco3">18</div>
+        </main>
+
+        <h2 class="valor-propriedade">flex wrap: wrap</h2>
+
+        <main class="container-flexwrap-wrap">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+            <div class="bloco1">4</div>
+            <div class="bloco2">5</div>
+            <div class="bloco3">6</div>
+            <div class="bloco1">7</div>
+            <div class="bloco2">8</div>
+            <div class="bloco3">9</div>
+            <div class="bloco1">10</div>
+            <div class="bloco2">11</div>
+            <div class="bloco3">12</div>
+            <div class="bloco1">13</div>
+            <div class="bloco2">14</div>
+            <div class="bloco3">15</div>
+            <div class="bloco1">16</div>
+            <div class="bloco2">17</div>
+            <div class="bloco3">18</div>
+        </main>
+
+
+        <h2 class="valor-propriedade">flex wrap: wrap reverse</h2>
+
+        <main class="container-wrap-reverse">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+            <div class="bloco1">4</div>
+            <div class="bloco2">5</div>
+            <div class="bloco3">6</div>
+            <div class="bloco1">7</div>
+            <div class="bloco2">8</div>
+            <div class="bloco3">9</div>
+            <div class="bloco1">10</div>
+            <div class="bloco2">11</div>
+            <div class="bloco3">12</div>
+            <div class="bloco1">13</div>
+            <div class="bloco2">14</div>
+            <div class="bloco3">15</div>
+            <div class="bloco1">16</div>
+            <div class="bloco2">17</div>
+            <div class="bloco3">18</div>
+        </main>
+
+
+        <hr>
+        <h1 class="nome-propriedade-flex-flow">6: FLEX FLOW - Propriedade ShorHand (Atalho que combina as propriedade
+            flex direction e flex wrap):
+            Ela é um atalho para uma ou mais Propriedade ou valores.
+            Exemplos:
+        </h1>
+
+
+
+        <h2 class="valor-propriedade">Flex Flow: row nowrap - (Não quebra a linha)</h2>
+
+        <main class="container-flexflow-row-nowrap">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+            <div class="bloco1">4</div>
+            <div class="bloco2">5</div>
+            <div class="bloco3">6</div>
+            <div class="bloco1">7</div>
+            <div class="bloco2">8</div>
+            <div class="bloco3">9</div>
+            <div class="bloco1">10</div>
+            <div class="bloco2">11</div>
+            <div class="bloco3">12</div>
+            <div class="bloco1">13</div>
+            <div class="bloco2">14</div>
+            <div class="bloco3">15</div>
+            <div class="bloco1">16</div>
+            <div class="bloco2">17</div>
+            <div class="bloco3">18</div>
+        </main>
+
+
+
+        <hr>
+        <!-- /********************** Align-Content *******************/ -->
+
+        <h1 class="nome-propriedade-align-content">7: Align-Content - Propriedade ShorHand (Atalho que combina as
+            propriedade
+            flex direction e flex wrap):
+            Ela é um atalho para uma ou mais Propriedade ou valores.
+            Exemplos:
+        </h1>
+
+
+
+        <h2 class="valor-propriedade">Flex Flow: row nowrap - (Não quebra a linha)</h2>
+
+        <main class="container-align-content">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+            <div class="bloco1">4</div>
+            <div class="bloco2">5</div>
+            <div class="bloco3">6</div>
+            <div class="bloco1">7</div>
+            <div class="bloco2">8</div>
+            <div class="bloco3">9</div>
+            <div class="bloco1">10</div>
+            <div class="bloco2">11</div>
+            <div class="bloco3">12</div>
+            <div class="bloco1">13</div>
+            <div class="bloco2">14</div>
+            <div class="bloco3">15</div>
+            <div class="bloco1">16</div>
+            <div class="bloco2">17</div>
+            <div class="bloco3">18</div>
+        </main>
+
+
+
+
+
     </main>
 
 </body>
