Finalizado Flex box

--- a/index.html
+++ b/index.html
@@ -305,18 +305,152 @@
         <hr>
         <!-- /********************** Align-Content *******************/ -->
 
-        <h1 class="nome-propriedade-align-content">7: Align-Content - Propriedade ShorHand (Atalho que combina as
-            propriedade
-            flex direction e flex wrap):
-            Ela é um atalho para uma ou mais Propriedade ou valores.
+        <h1 class="nome-propriedade-align-content">7: Align-Content - Só Funciona junto com wrap (Quebra de linha), não funciona com nowrap. Para quando existir o flex wrap ou seja quebra de linha e nos queremos alinhar os objetos no eixo perpendicular e secundario.
             Exemplos:
         </h1>
 
 
 
-        <h2 class="valor-propriedade">Flex Flow: row nowrap - (Não quebra a linha)</h2>
+        <h2 class="valor-propriedade">Align-Content: center</h2>
 
         <main class="container-align-content">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+            <div class="bloco1">4</div>
+            <div class="bloco2">5</div>
+            <div class="bloco3">6</div>
+            <div class="bloco1">7</div>
+            <div class="bloco2">8</div>
+            <div class="bloco3">9</div>
+            <div class="bloco1">10</div>
+            <div class="bloco2">11</div>
+            <div class="bloco3">12</div>
+            <div class="bloco1">13</div>
+            <div class="bloco2">14</div>
+            <div class="bloco3">15</div>
+            <div class="bloco1">16</div>
+            <div class="bloco2">17</div>
+            <div class="bloco3">18</div>
+        </main>
+        <h2 class="valor-propriedade">Align-Content: flex-start</h2>
+
+        <main class="container-align-content-flex-start">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+            <div class="bloco1">4</div>
+            <div class="bloco2">5</div>
+            <div class="bloco3">6</div>
+            <div class="bloco1">7</div>
+            <div class="bloco2">8</div>
+            <div class="bloco3">9</div>
+            <div class="bloco1">10</div>
+            <div class="bloco2">11</div>
+            <div class="bloco3">12</div>
+            <div class="bloco1">13</div>
+            <div class="bloco2">14</div>
+            <div class="bloco3">15</div>
+            <div class="bloco1">16</div>
+            <div class="bloco2">17</div>
+            <div class="bloco3">18</div>
+        </main>
+        <h2 class="valor-propriedade">Align-Content: flex-end</h2>
+
+        <main class="container-align-content-flex-end">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+            <div class="bloco1">4</div>
+            <div class="bloco2">5</div>
+            <div class="bloco3">6</div>
+            <div class="bloco1">7</div>
+            <div class="bloco2">8</div>
+            <div class="bloco3">9</div>
+            <div class="bloco1">10</div>
+            <div class="bloco2">11</div>
+            <div class="bloco3">12</div>
+            <div class="bloco1">13</div>
+            <div class="bloco2">14</div>
+            <div class="bloco3">15</div>
+            <div class="bloco1">16</div>
+            <div class="bloco2">17</div>
+            <div class="bloco3">18</div>
+        </main>
+
+        <h2 class="valor-propriedade">Align-Content: space-between</h2>
+
+        <main class="container-align-content-space-between">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+            <div class="bloco1">4</div>
+            <div class="bloco2">5</div>
+            <div class="bloco3">6</div>
+            <div class="bloco1">7</div>
+            <div class="bloco2">8</div>
+            <div class="bloco3">9</div>
+            <div class="bloco1">10</div>
+            <div class="bloco2">11</div>
+            <div class="bloco3">12</div>
+            <div class="bloco1">13</div>
+            <div class="bloco2">14</div>
+            <div class="bloco3">15</div>
+            <div class="bloco1">16</div>
+            <div class="bloco2">17</div>
+            <div class="bloco3">18</div>
+        </main>
+
+        <h2 class="valor-propriedade">Align-Content: space-around</h2>
+
+        <main class="container-align-content-space-around">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+            <div class="bloco1">4</div>
+            <div class="bloco2">5</div>
+            <div class="bloco3">6</div>
+            <div class="bloco1">7</div>
+            <div class="bloco2">8</div>
+            <div class="bloco3">9</div>
+            <div class="bloco1">10</div>
+            <div class="bloco2">11</div>
+            <div class="bloco3">12</div>
+            <div class="bloco1">13</div>
+            <div class="bloco2">14</div>
+            <div class="bloco3">15</div>
+            <div class="bloco1">16</div>
+            <div class="bloco2">17</div>
+            <div class="bloco3">18</div>
+        </main>
+
+        <h2 class="valor-propriedade">Align-Content: Space-Evenly</h2>
+
+        <main class="container-align-content-space-evenly">
+            <div class="bloco1">1</div>
+            <div class="bloco2">2</div>
+            <div class="bloco3">3</div>
+            <div class="bloco1">4</div>
+            <div class="bloco2">5</div>
+            <div class="bloco3">6</div>
+            <div class="bloco1">7</div>
+            <div class="bloco2">8</div>
+            <div class="bloco3">9</div>
+            <div class="bloco1">10</div>
+            <div class="bloco2">11</div>
+            <div class="bloco3">12</div>
+            <div class="bloco1">13</div>
+            <div class="bloco2">14</div>
+            <div class="bloco3">15</div>
+            <div class="bloco1">16</div>
+            <div class="bloco2">17</div>
+            <div class="bloco3">18</div>
+        </main>
+
+
+        <h2 class="valor-propriedade">Align-Content: Inherit (Herdado do Pai)</h2>
+
+        <main class="container-align-content-inherit">
             <div class="bloco1">1</div>
             <div class="bloco2">2</div>
             <div class="bloco3">3</div>
