--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
         <img class="logo" src="Imagens/logo.png" alt="logo" height="80%">
         <nav class="navegacao">
             <ul>
-                <li>Home</li>
-                <li>Linhas</li>
-                <li>Colunas</li>
+                <li><a href="#display">Display</a></li>
+                <li><a href="#Flex-direction">Flex-direction</a></li>
+                <li><a href="#Justify-Content">Justify-Content</a></li>
+                <li><a href="#Align-Itens">Align-Itens</a></li>
+                <li><a href="#Flex-Wrap">Flex-wrap</a></li>
+                <li><a href="#Flex-Flow">Flex-Flow</a></li>
+                <li><a href="#Align-Content">Align-Content</a></li>
+                
+
+
+
+                
 
             </ul>
 
@@ -29,10 +38,10 @@
         Propriedades Flexbox - Parte 1: Container</h1>
     <hr>
     <main class="principal">
-        <h1 class="nome-propriedade">1 - Display - Ativa o flexbox / identifica que aquele elemento será um container
+        <h1 class="nome-propriedade" id="display">1 - Display - Ativa o flexbox / identifica que aquele elemento será um container
             flex.</h1>
         <hr>
-        <h1 class="nome-propriedade">2 - Flex-direction - Define a direção do eixo principal.<br>Exemplos:</h1>
+        <h1 class="nome-propriedade" id="Flex-direction">2 - Flex-direction - Define a direção do eixo principal.<br>Exemplos:</h1>
 
         <h2 class="valor-propriedade">Flex-direction: row</h2>
 
@@ -71,7 +80,7 @@
         <hr>
 
 
-        <h1 class="nome-propriedade">3: Justify-Content
+        <h1 class="nome-propriedade" id="Justify-Content">3: Justify-Content
             Alinhar os objetos ou elementos no eixo principal.<br>
             Exemplos:
         </h1>
@@ -135,7 +144,7 @@
 
 
         <hr>
-        <h1 class="nome-propriedade">4: Align-Itens:
+        <h1 class="nome-propriedade" id="Align-Itens">4: Align-Itens:
             Alinha os objetos nos eixos perpendiculares ou secundários.<br>
             Exemplos:
         </h1>
@@ -190,7 +199,7 @@
 
 
         <hr>
-        <h1 class="nome-propriedade">5: Flex-wrap:
+        <h1 class="nome-propriedade" id="Flex-Wrap">5: Flex-wrap:
             Serve para decidir se os elemnetos irão para a linha de baixo, quando chegar no final ou se eles ficarão
             espremidos - Quebra de linhas.<br>
             Exemplos:
@@ -269,7 +278,7 @@
 
 
         <hr>
-        <h1 class="nome-propriedade-flex-flow">6: FLEX FLOW - Propriedade ShorHand (Atalho que combina as propriedade
+        <h1 class="nome-propriedade-flex-flow" id="Flex-Flow">6: FLEX FLOW - Propriedade ShorHand (Atalho que combina as propriedade
             flex direction e flex wrap):
             Ela é um atalho para uma ou mais Propriedade ou valores.
             Exemplos:
@@ -305,7 +314,7 @@
         <hr>
         <!-- /********************** Align-Content *******************/ -->
 
-        <h1 class="nome-propriedade-align-content">7: Align-Content - Só Funciona junto com wrap (Quebra de linha), não funciona com nowrap. Para quando existir o flex wrap ou seja quebra de linha e nos queremos alinhar os objetos no eixo perpendicular e secundario.
+        <h1 class="nome-propriedade-align-content" id="Align-Content">7: Align-Content - Só Funciona junto com wrap (Quebra de linha), não funciona com nowrap. Para quando existir o flex wrap ou seja quebra de linha e nos queremos alinhar os objetos no eixo perpendicular e secundario.
             Exemplos:
         </h1>
 
